# MLx-Week4-MultiModal

./: MultiModal.py  MultiModal_withpretain.py  create_dataset.py  multimodal_captioning.py  pyproject.toml  requirements.txt
